--- a/views/part/footer.ejs
+++ b/views/part/footer.ejs
@@ -4,6 +4,8 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
 </noscript>
 
+<link href="https://fonts.googleapis.com/css?family=Inconsolata|Source+Sans+Pro" rel="stylesheet">
+
 <script>
     var loadDeferredStyles = function() {
         var addStylesNode = document.getElementById("deferred-styles");
