made heroku ready

--- a/views/part/header.ejs
+++ b/views/part/header.ejs
@@ -19,7 +19,7 @@
 
 <header class="header">
 	<h1 class="header__logo logo">Amsterdam Strains</h1>
-    <div id="offline-symbol"><img src="images/wifi.svg" alt="no-wifi image"></div>
+    <div id="offline-symbol">Offline</div>
 
 	<% include nav.ejs %>
 
